crates/htui/tests/snapshots/backlog__item_form_edit.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ Edit ANA-1 (v1) ──────────────────────────┐
│▾ htui (8)                                           ││  kind     ‹ANA analysis›                  │
│  ANA-1    done               Data model, box regist…││> title    …box registry and sync topology │
│  ANA-2    open               Orchestrator step grap…││  priority 0                               │
│  CLEAN-1  failed             Drop the legacy markdo…││  tags                                     │
│  FEAT-1   in_progress        TUI scaffold           ││  graph    ‹kind default›                  │
│  FEAT-2   blocked            Agent driver and chat …││  paths (one per line)                     │
│  FEAT-3   queued             Postgres store and cac…││                                           │
│  FIX-1    closed             Terminal left raw afte…││                                           │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││  body                                     │
│  ANA-1    done               Prompt assembly survey ││The store seam is the one interface every o│
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││Postgres holds the truth; every box keeps a│
│                                                     ││compare-and-set on a version column, so a l│
│                                                     ││than silently dropped.                     │
│                                                     ││                                           │
│                                                     ││Item keys are minted from a per-project cou│
│                                                     ││legacy importer align the counter above the│
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││Tab field  Ctrl+S save  Esc cancel         │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
