crates/htui/tests/snapshots/backlog__item_form_new.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ New item · htui ──────────────────────────┐
│▾ htui (8)                                           ││  project  ‹htui›                          │
│  ANA-1    done               Data model, box regist…││  kind     ‹ANA analysis›                  │
│  ANA-2    open               Orchestrator step grap…││> title    Fresh item                      │
│  CLEAN-1  failed             Drop the legacy markdo…││  priority 0                               │
│  FEAT-1   in_progress        TUI scaffold           ││  tags                                     │
│  FEAT-2   blocked            Agent driver and chat …││  graph    ‹kind default›                  │
│  FEAT-3   queued             Postgres store and cac…││  paths (one per line)                     │
│  FIX-1    closed             Terminal left raw afte…││                                           │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││  body                                     │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││Tab field  Ctrl+S save  Esc cancel         │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
