crates/htui/tests/snapshots/backlog__runs_closeout_warn.snap
---
source: crates/htui/tests/backlog.rs
expression: warn
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ ANA-1 ────────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││kind   status    box          started      │
│  ANA-2    open               Orchestrator step grap…││mode                          finished     │
│  CLEAN-1  failed             Drop the legacy markdo…││graph  done      DESKTOP-HTUI 09-02 14:00  │
│  FEAT-1   in_progress        TUI scaffold           ││manual                        09-02 17:00  │
│  FEAT-2   blocked            Agent driver and chat …││▸ 0.1/0 done       research         —  1h00│
│  FEAT-3   queued             Postgres store and cac…││        approved✓  claude/opus             │
│  FIX-1    closed             Terminal left raw afte…││  0.1/1 superseded research         —  2h00│
│  TOOL-1   awaiting_approval  CI matrix for the thre…││        —          agy/default             │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││close ANA-1 as done · 1 runs · 0 commit    │
│                                                     ││rows · summary v2                          │
│                                                     ││←/→ resolution · y continue · n cancel     │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
