crates/htui/tests/snapshots/backlog__runs_flow_fanout.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ ANA-1 ────────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││graph  done      DESKTOP-HTUI 09-02 14:00  │
│  ANA-2    open               Orchestrator step grap…││                                           │
│  CLEAN-1  failed             Drop the legacy markdo…││ ┌──────────────────┐ ┌──────────────────┐ │
│  FEAT-1   in_progress        TUI scaffold           ││ │0.1/0 done ✓      │ │0.1/1 superseded  │ │
│  FEAT-2   blocked            Agent driver and chat …││ │research          │ │research          │ │
│  FEAT-3   queued             Postgres store and cac…││ └──────────────────┘ └──────────────────┘ │
│  FIX-1    closed             Terminal left raw afte…││                                           │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
